2004-05-04  Chris Abbey  <jikes@cabbey.net>

	* autogen.sh: made more user friendly

2004-05-03  Elliott Hughes  <enh@acm.org>

	* src/init.cpp: fix bug #3948 by ignoring fields of array types
	when looking for final fields that could be made static.

2004-05-03  Elliott Hughes  <enh@acm.org>

	* src/class.cpp, src/error.cpp: ensures we also print the path to
	the class file within the JAR file (i.e. include the package) in
	diagnostics about invalid class files.

2004-05-03  Elliott Hughes  <enh@acm.org>

	* src/class.h: fixes compilation with libgcj3.3.jar; gcj-compiled
	classes have an extra attribute "gnu.gcj.gcj-compiled". A fencepost
	error in GetN was causing us to reject the class file. (Also fixes
	the analogous error in SkipN.)

2004-05-03  Elliott Hughes  <enh@acm.org>

	* src/class.h, src/class.cpp: Always call MarkInvalid rather than
	sometimes manipulating the field directly, and switch from a simple
	boolean to a description of the problem we found...
	* src/error.cpp: ...so we can give a potentially useful diagnostic.

2004-05-01  Elliott Hughes  <enh@acm.org>

	* src/control.cpp: it's the import that's unused, not the name.
	Let the user's editor highlight the whole import declaration,
	not just the name.

2004-04-18  Chris Abbey  <jikes@cabbey.net>

	Release 1.20.

2004-04-17  Chris Abbey  <jikes@cabbey.net>

	* src/expr.cpp: convert ExtremaForType, ReportOverflow, and 
	CheckIntegerAddition from static to inline to allow compilation
	on AIX.
	
2004-04-17  Eric Blake  <ebb9@byu.net>

	* src/m4/ac_cxx_exceptions.m4: Delete - this file is no longer
	needed, because jikes doesn't use exceptions.
	* src/Makefile.in: Regenerate.

2004-04-16  Chris Abbey  <jikes@cabbey.net>

	* src/Makefile.in: trivial hand patch, looks like  src/m4/
	was not up to date the last time this was regen'd.

2004-04-15  Eric Blake  <ebb9@byu.net>

	* NEWS: More news blurbs.
	* configure.ac: Bump jikes version, and update to automake 1.8.3.
	* config.guess: Regenerate.