@@ -1,5 +1,9 @@
 2004-05-04  Chris Abbey  <jikes@cabbey.net>
 
+	* src/m4/ac_check_iconv.m4: enable --without-iconv
+
+2004-05-04  Chris Abbey  <jikes@cabbey.net>
+
 	* autogen.sh: made more user friendly
 
 2004-05-03  Elliott Hughes  <enh@acm.org>
